Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,8 @@ trigger:
 - master
 
 pool:
-  # vmImage: ubuntu-latest
-  name: custom
+  vmImage: ubuntu-latest
+  # name: custom
 
 # steps:
 # - script: echo Hello, world!
