Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,8 +39,7 @@ stages:
       #     targetPath: '$(Pipeline.Workspace)/target'
       #     artifact: '*.war'
       #     publishLocation: 'pipeline'
-      # - publish: '$(Build.ArtifactStagingDirectory)/target'
-      #   artifact: warFiles
+      
       - task: CopyFiles@2
         inputs:
           SourceFolder: 'target'
@@ -51,16 +50,13 @@ stages:
       - script: |
               set -x
               ls '$(Build.ArtifactStagingDirectory)/'
-              pwd
-              find .
-    - job: check
+        displayName: "Check if artifact is copied"
+    - job: uploadpackage
+      displayName: 'Archive package to be used by next stage'
+      dependsOn: mavenpackage
       steps:
-      - script: |
-            set -x
-            ls
-            ls '$(Build.ArtifactStagingDirectory)/'
-            pwd
-            find .
+      - publish: '$(Build.ArtifactStagingDirectory)/target'
+        artifact: warFiles
   - stage: Uploadartifact
     displayName: 'Upload to azure artifacts'
     jobs:
@@ -70,4 +66,7 @@ stages:
           artifact: warFiles
           patterns: '**/*.war'
         - script: |
+              set -x
               ls '$(Pipeline.Workspace)'
+              ls
+              find .
