Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ stages:
         - script: |
               set -x
               find '$(Pipeline.Workspace)'
-              ls
+              find . | grep -i war
               
         - task: PublishBuildArtifacts@1
           inputs:
