Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,7 @@ stages:
       - publish: '$(Build.ArtifactStagingDirectory)'
         artifact: warFiles
   - stage: Uploadartifact
+    dependsOn: createArtifact
     displayName: 'Upload to azure artifacts'
     jobs:
     - job: Downloadartifact
