--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,11 @@ stages:
       steps:
       - publish: '$(Build.ArtifactStagingDirectory)'
         artifact: warFiles
+      - task: PublishPipelineArtifact@1
+        inputs:
+          targetPath: '$(Build.ArtifactStagingDirectory)'
+          artifact: 'wars'
+          publishLocation: 'pipeline'
   - stage: Uploadartifact
     dependsOn: createArtifact
     displayName: 'Upload to azure artifacts'
@@ -66,6 +71,12 @@ stages:
         - download: current
           artifact: warFiles
           patterns: '**/*.war'
+        - task: DownloadPipelineArtifact@2
+          inputs:
+            buildType: 'current'
+            artifactName: 'wars'
+            itemPattern: '**/*.war'
+            targetPath: '$(Pipeline.Workspace)'
         - script: |
               set -x
               find '$(Pipeline.Workspace)'
