--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,6 +55,12 @@ stages:
       displayName: 'Archive package to be used by next stage'
       dependsOn: mavenpackage
       steps:
+      - script: |
+            set -x
+            find .
+            find '$(Build.ArtifactStagingDirectory)/'
+            ls '$(Build.ArtifactStagingDirectory)/'
+            ls
       # - publish: '$(Build.ArtifactStagingDirectory)'
       #   artifact: warFiles
       # - task: PublishPipelineArtifact@1
