--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,16 +68,16 @@ stages:
             ls
       # - publish: '$(Build.ArtifactStagingDirectory)'
       #   artifact: warFiles
-      # - task: PublishPipelineArtifact@1
-      #   inputs:
-      #     targetPath: '$(Build.ArtifactStagingDirectory)'
-      #     artifact: 'wars'
-      #     publishLocation: 'pipeline'
-      - task: PublishBuildArtifacts@1
+      - task: PublishPipelineArtifact@1
         inputs:
-          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-          ArtifactName: 'drop'
-          publishLocation: 'Container'
+          targetPath: '$(Pipeline.Workspace)/warFiles'
+          artifact: 'wars'
+          publishLocation: 'pipeline'
+      # - task: PublishBuildArtifacts@1
+      #   inputs:
+      #     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      #     ArtifactName: 'drop'
+      #     publishLocation: 'Container'
   - stage: Uploadartifact
     dependsOn: createArtifact
     displayName: 'Upload to azure artifacts'
@@ -87,19 +87,19 @@ stages:
         # - download: current
         #   artifact: warFiles
         #   patterns: '**/*.war'
-        # - task: DownloadPipelineArtifact@2
-        #   inputs:
-        #     buildType: 'current'
-        #     artifactName: 'wars'
-        #     itemPattern: '**'
-        #     targetPath: '$(Pipeline.Workspace)'
-        - task: DownloadBuildArtifacts@1
+        - task: DownloadPipelineArtifact@2
           inputs:
             buildType: 'current'
-            downloadType: 'single'
-            artifactName: 'drop'
-            downloadPath: '$(System.ArtifactsDirectory)'
-            cleanDestinationFolder: true
+            artifactName: 'wars'
+            itemPattern: '**/*.war'
+            targetPath: '$(Pipeline.Workspace)'
+        # - task: DownloadBuildArtifacts@1
+        #   inputs:
+        #     buildType: 'current'
+        #     downloadType: 'single'
+        #     artifactName: 'drop'
+        #     downloadPath: '$(System.ArtifactsDirectory)'
+        #     cleanDestinationFolder: true
         - script: |
               set -x
               find '$(System.ArtifactsDirectory)'
@@ -108,6 +108,6 @@ stages:
               
         - task: PublishBuildArtifacts@1
           inputs:
-            PathtoPublish: '$(Pipeline.Workspace)/warFiles'
-            ArtifactName: 'wars'
+            PathtoPublish: '$(Pipeline.Workspace)/wars'
+            ArtifactName: 'finalbuildwars'
             publishLocation: 'Container'
