--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -108,6 +108,6 @@ stages:
               
         - task: PublishBuildArtifacts@1
           inputs:
-            PathtoPublish: '$(Pipeline.Workspace)'
+            PathtoPublish: '$(Pipeline.Workspace)/wars'
             ArtifactName: 'finalbuildwars'
             publishLocation: 'Container'
