--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -100,6 +100,8 @@ stages:
       - script: |
             find . | grep -v '.git' 
             ls
+            pwd
+            echo '$(Build.SourcesDirectory)'
 
   - stage: Uploadartifact
     dependsOn: createArtifact
