--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,7 +102,7 @@ stages:
             ls
             pwd
             echo '$(Build.SourcesDirectory)'
-      - template: Jenkins-Capstone-Project/pipelines/azure-pipelines-build-image.yml
+      - template: pipelines/azure-pipelines-build-image.yml@dockerfilerepo
   - stage: Uploadartifact
     dependsOn: createArtifact
     displayName: 'Upload to azure artifacts'
