Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,6 +105,7 @@ stages:
             ls
             pwd
             echo '$(Build.SourcesDirectory)'
+            echo '$(Build.SourceBranchName)'
       - task: Docker@2
         inputs:
           containerRegistry: 'mydockerhub'
